[tool.poetry]
name = "r_layoutparser"
version = "0.1.0"
description = "Mucking around with `reticulate` and `layoutparser`"
authors = ["Bas Latcham <bas@latcham.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
layoutparser = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
